--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 /extension
 
+/.vscode
 
 # Created by https://www.gitignore.io/api/node,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,visualstudio,visualstudiocode
