--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "isBackground": true,
             "dependsOn": "npm install",
             "options": {
-                "cwd": "${workspaceFolder}/app"
+                "cwd": "${workspaceFolder}/api"
             }
         },
         {
@@ -16,7 +16,7 @@
             "label": "npm install",
             "command": "npm install",
             "options": {
-                "cwd": "${workspaceFolder}/app"
+                "cwd": "${workspaceFolder}/api"
             }
         },
         {
@@ -25,7 +25,7 @@
             "command": "npm prune --production",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/app"
+                "cwd": "${workspaceFolder}/api"
             }
         }
     ]
